--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "author": "Franco Villalba",
-    "description": "Módulo para conectarse a AWS",
+    "description": "Module to connect to AWS S3 Bucket | Módulo para conectar ao AWS S3 Bucket | Módulo para conectarse a AWS S3 Bucket",
     "disclaimer": "THERE IS NO WARRANTY FOR THE PROGRAM, TO THE EXTENT PERMITTED BY APPLICABLE LAW. EXCEPT WHEN OTHERWISE STATED IN WRITING THE COPYRIGHT HOLDERS AND/OR OTHER PARTIES PROVIDE THE PROGRAM “AS IS” WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESSED OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE. THE ENTIRE RISK AS TO THE QUALITY AND PERFORMANCE OF THE PROGRAM IS WITH YOU. SHOULD THE PROGRAM PROVE DEFECTIVE, YOU ASSUME THE COST OF ALL NECESSARY SERVICING, REPAIR OR CORRECTION.",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "license": "MIT",
     "homepage": "http://rockertbot.cl",
     "linux": false,
